Update Contacts .html

--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
                 <div class="contact-info">
                     <h3>Get In Touch</h3>
                     <a href="mailto:info@ecoenhance.com">✉️ info@ecoenhance.com</a>
-                    <a href="tel:+1234567890">📞 +1 (234) 567-890</a>
-                    <p>📍 123 Greenway Blvd, Eco City, EC 12345</p>
+                    <a href="tel:+919266114333">📞 +1 (234) 567-890</a>
+                    <p>📍 Eco Enhance Private Limited, Sector 83 Gurgaon (Haryana) 122004</p>
                 </div>
                 
                 <div class="contact-form">
