--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <h3>Get In Touch</h3>
-                    <a href="mailto:info@ecoenhance.com">✉️ info@ecoenhance.com</a>
-                    <a href="tel:+919266114333">📞 +1 (234) 567-890</a>
+                    <a href="mailto:gyan@ecoenhance.org">✉️ gyan@ecoenhance.org</a>
+                    <a href="tel:+919266114333">📞 +919266114333 </a>
                     <p>📍 Eco Enhance Private Limited, Sector 83 Gurgaon (Haryana) 122004</p>
                 </div>
                 
